BREAKING CHANGE: Google api switched with pexels - Modify all api and fetch structures

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_GOOGLE_API_KEY=AIzaSyDVgoRN16eqLeh6ZxwioqYZtiSn0lxkUys
-VUE_APP_GOOGLE_CX=a0cc19e8174d9498f
+VUE_APP_PEXELS_URL=https://api.pexels.com/v1
+VUE_APP_PEXELS_API_KEY=ACnF94S7lj0EVi4qoK4xyQmxhzbyQs4K6zrmptb5FSofpd3j6juM64el
