--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VUE_APP_PEXELS_URL=https://api.pexels.com/v1
 VUE_APP_PEXELS_API_KEY=ACnF94S7lj0EVi4qoK4xyQmxhzbyQs4K6zrmptb5FSofpd3j6juM64el
+VUE_APP_ALEGRA_URL=https://api.alegra.com/api/v1
+VUE_APP_ALEGRA_API_TOKEN=Y2VkZ28xOTk3QGdtYWlsY29tOjMxYzZkNTM3MDEwZjliMzRlMzcy
