FIX: .env variable typo fix

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_PEXELS_URL=https://api.pexels.com/v1
 VUE_APP_PEXELS_API_KEY=ACnF94S7lj0EVi4qoK4xyQmxhzbyQs4K6zrmptb5FSofpd3j6juM64el
 VUE_APP_ALEGRA_URL=https://api.alegra.com/api/v1
-VUE_APP_ALEGRA_USERNAME=cedgo1997@gmailcom
+VUE_APP_ALEGRA_USERNAME=cedgo1997@gmail.com
 VUE_APP_ALEGRA_TOKEN=31c6d537010f9b34e372
